--- a/src/App.css
+++ b/src/App.css
@@ -83,6 +83,8 @@ p{
   overflow: hidden;
   text-overflow: ellipsis;
   margin: 5px;
+  text-decoration: none;
+  color: orange;
 }
 .itemImage{
   background-repeat: no-repeat;
@@ -93,17 +95,16 @@ p{
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  align-items: flex-end;
+  align-items: center;
+  padding-top: 15px;
 }
-.itemImage a, .itemImage textarea{
-  background-color: rgba(0, 100, 100, 0.5 );
+.itemImage textarea{
+  background-color: rgba(200, 200, 0, .5 );
   text-decoration: none;
   color: white;
   text-align: center;
-  width: 64%;
+  width: 90%;
   border-radius: 10px;
-  padding: 5px;
-  margin: 5px;
   resize: none;
 }
 .itemImage textarea:hover{
